@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfce4-mixer-4.5.92.tar.bz2 413736 RMD160 19f898f5dd6c0ba8bf2d84e2d36bbdcb2064b65c SHA1 e87d8f43e641930faba3804504f8f50964721d6f SHA256 dd6fd62fe9f1a8fbf2b54d02dfe12bf0b7aa48024cd06cda9e078516307675f1
 DIST xfce4-mixer-4.5.93.tar.bz2 407693 RMD160 d316e680c5c9122cc9ab412eec0c9b9e77a55a5e SHA1 b0a6dbaf836ab94dc3f770013ff2bdd9d4916e73 SHA256 8659795066117f98752984b0b263fc6f903032dfbb6186797ebacb63b5fbce55
+DIST xfce4-mixer-4.5.99.1.tar.bz2 430491 RMD160 b2205b0289a558686bd750b32d6dd48cba771f1e SHA1 839a25729a884d70ae5d4724c6560d2addb891f7 SHA256 d907250e4aad20ba4727cdf827d187a3fa37426520c525868159a6e81a218923
 EBUILD xfce4-mixer-4.5.92.ebuild 799 RMD160 26c83a3555d5967c75cd7c6448dade668ab886f7 SHA1 8e342e7784c99eacf45b22d927d9df8728727e08 SHA256 8155556ac6fa63c18dc294839a18ba4da9bf923862571d3ac1c075eeebea7574
 EBUILD xfce4-mixer-4.5.93.ebuild 799 RMD160 26c83a3555d5967c75cd7c6448dade668ab886f7 SHA1 8e342e7784c99eacf45b22d927d9df8728727e08 SHA256 8155556ac6fa63c18dc294839a18ba4da9bf923862571d3ac1c075eeebea7574
+EBUILD xfce4-mixer-4.5.99.1.ebuild 799 RMD160 26c83a3555d5967c75cd7c6448dade668ab886f7 SHA1 8e342e7784c99eacf45b22d927d9df8728727e08 SHA256 8155556ac6fa63c18dc294839a18ba4da9bf923862571d3ac1c075eeebea7574
 EBUILD xfce4-mixer-9999.ebuild 799 RMD160 26c83a3555d5967c75cd7c6448dade668ab886f7 SHA1 8e342e7784c99eacf45b22d927d9df8728727e08 SHA256 8155556ac6fa63c18dc294839a18ba4da9bf923862571d3ac1c075eeebea7574
-MISC ChangeLog 753 RMD160 a189bcc6dba5700d94b9cc981047feef6d447d61 SHA1 a3a4221f7c03f2390d913873e00e5f5ee16074e3 SHA256 96babfe69487530fce08f3b2e912a45586091e836b2de8c0eedb7f8e15e4e64f
+MISC ChangeLog 890 RMD160 6dcf49eee0e9d2e6b0d31f0bb78dc4a5f7da6597 SHA1 d38bf37b6c185952b9a9fbff067910f08441d187 SHA256 bee2f7884ee7f6d43243da2e9bc583a1b47fc2f77aa77557359ad01689bff2c0
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYkACgkQKhnDs22gwa8NMACeNZK9Xa1bUMcCjAVDcMG68e/R
-eMYAoPpXUZPlcBAgmpJQ/OF7pYo+Wsvl
-=Taj0
+iEYEARECAAYFAkl9xe0ACgkQKhnDs22gwa9wwgCfVxcSX5duhg36/CIyfNmXSbOp
+R0sAoJDZ2aRx646w10CdECquMQlNp5v2
+=a7vi
 -----END PGP SIGNATURE-----
